tests/ui/feature-gates/feature-gate-partial-init-locals.stderr
error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/feature-gate-partial-init-locals.rs:5:5
   |
LL |     a.0 = 1;
   |     ^^^^^^^
   |
   = note: see issue #153699 <https://github.com/rust-lang/rust/issues/153699> for more information
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: partially assigned binding `a` isn't fully initialized
  --> $DIR/feature-gate-partial-init-locals.rs:5:5
   |
LL |     let a: A;
   |         - binding declared here but left uninitialized
LL |     a.0 = 1;
   |     ^^^^^^^ `a` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0381, E0658.
For more information about an error, try `rustc --explain E0381`.
